# imghex

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
imghex-core/: Cargo.toml
imghex-core/src/: color.rs  field.rs  fixtures.rs  format.rs  lib.rs  model.rs  region.rs  search.rs  stats.rs
imghex-core/src/formats/: bmp.rs  jpeg.rs  mod.rs  netpbm.rs
imghex-core/tests/: bmp_tests.rs  jpeg_tests.rs  netpbm_tests.rs
imghex-gui/: Cargo.toml
imghex-gui/src/: main.rs
