[package]
name = "imghex-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GUI hex editor for image files, built on egui/eframe."

[[bin]]
name = "imghex"
path = "src/main.rs"

[dependencies]
imghex-core = { path = "../imghex-core" }
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.28"

# rfd backend is platform-specific. On Windows/macOS use the native OS file
# dialog (the crate's default backend). On Linux use the XDG desktop portal so
# no GTK development libraries are required to build.
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "async-std"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.14"
